--- a/SeliniumWebDriverManager/pom.xml
+++ b/SeliniumWebDriverManager/pom.xml
@@ -50,5 +50,47 @@
     <version>3.13</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>4.5.1</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
   </dependencies>
+  <build>
+  <plugins>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M6</version>
+        <configuration>  
+        <includes>
+        <include>TestngPriority.java</include>
+        </includes>      
+          <!--<suiteXmlFiles>
+            <suiteXmlFile>${testngFile}</suiteXmlFile>
+          </suiteXmlFiles>-->
+        </configuration>
+      </plugin>
+      
+       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+    </plugin>
+    
+</plugins>
+  </build>
 </project>
